fix next button

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
       </blockquote>
       <section id="timeline">
         <div id="timeline-line">
-        <div class="timeline-item" id="1975">1975</div>
-        <div class="timeline-item" id="1994">1994</div>
-        <div class="timeline-item" id="1995">1995</div>
-        <div class="timeline-item" id="2005">2005</div>
-        <div class="timeline-item" id="2010">2010</div>
+        <div class="timeline-item" id="1975" data-index=0>1975</div>
+        <div class="timeline-item" id="1994" data-index=1>1994</div>
+        <div class="timeline-item" id="1995" data-index=2>1995</div>
+        <div class="timeline-item" id="2005" data-index=3>2005</div>
+        <div class="timeline-item" id="2010" data-index=4>2010</div>
         </div>
       </section>
       <div class="year-info" id="1975-info">
