Added button removal for when end of timeline reached

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </main>
     <footer>
         <a id="tribute-link" target="_blank" href="https://www.theguardian.com/books/2020/jul/23/brandon-sanderson-after-a-dozen-rejected-novels-you-think-maybe-this-isnt-for-you">More information about Brandon Sanderson and his books</a>
-        <button id="next-timeline-item-button">Next</button>
+        <button id="next-timeline-item-button">Next -></button>
     </footer>
     <script src="./script.js"></script>
   </body>
