--- a/index.html
+++ b/index.html
@@ -17,29 +17,59 @@
         <div class="timeline-item" id="1975" data-index=0>1975</div>
         <div class="timeline-item" id="1994" data-index=1>1994</div>
         <div class="timeline-item" id="1995" data-index=2>1995</div>
-        <div class="timeline-item" id="2005" data-index=3>2005</div>
-        <div class="timeline-item" id="2010" data-index=4>2010</div>
+        <div class="timeline-item" id="2003" data-index=3>2003</div>
+        <div class="timeline-item" id="2005" data-index=4>2005</div>
+        <div class="timeline-item" id="2010" data-index=5>2010</div>
+        <div class="timeline-item" id="2014" data-index=6>2014</div>
         </div>
       </section>
       <div class="year-info" id="1975-info">
         <h2>1975</h2>
-        Born in Lincoln Nebraska.
+        <p>
+          Born in Lincoln Nebraska.
+          Sanderson had been a fantasy obsessive since the age of 14, when a copy of Dragonsbane by Barbara Hambly turned the reluctant reader into a lifetime fan.
+        </p>
       </div>
       <div class="year-info" id="1994-info">
         <h2>1994</h2>
-        Enrolled at BYU-I in biochemestry
+        <p>
+          Enrolled at BYU-I in biochemestry. publishers kept telling him that his epic fantasies were too long, that he should try being darker or “more like George RR Martin” (it was the late 90s, and A Song of Ice and Fire was topping bestseller charts). His attempts to write grittier books were terrible, he says, so he became “kind of depressed”.
+        </p>
       </div>
       <div class="year-info" id="1995-info">
         <h2>1995</h2>
-        Served as a missionary for the Church in Seol.
+        <p>
+          Served as a missionary for the Church in Seol. Brandon often says that it was during this time in Seoul, Korea that he realized that he didn’t miss chemistry one bit, but he did miss writing. 
+        </p>
+      </div>
+      <div class="year-info" id="2003-info">
+        <h2>2003</h2>
+          <p>
+            A publisher, Tor, finally showed interest in one of his novels: Elantris, an epic fantasy set in a former city of the gods, now devoid of magic.
+            Tor was also interested in The Way of Kings, but Sanderson, in an unusual move, decided “something wasn’t quite right” and pulled it.
+          </p>
       </div>
       <div class="year-info" id="2005-info">
         <h2>2005</h2>
-        Published his first novel called Elantris.
+        <p>
+          Published his first novel called Elantris.
+          <figure id="img-div">
+            <img src="./elantris.jpg" alt="" id="image">
+            <figcaption id="img-caption">Elantris book</figcaption>
+          </figure>
+        </p>
       </div>
       <div class="year-info" id="2010-info">
         <h2>2010</h2>
-        Published the way of kings.
+        <p>
+          Published the way of kings.
+        </p>
+      </div>
+      <div class="year-info" id="2014-info">
+        <h2>2014</h2>
+        <p>
+          Words of Radiance, landed Sanderson his first No 1 on the New York Times bestseller charts.
+        </p>
       </div>
     </main>
     <footer>
@@ -47,5 +77,6 @@
         <button id="next-timeline-item-button">Next -></button>
     </footer>
     <script src="./script.js"></script>
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
   </body>
 </html>
